# iris

./: ARCHITECTURE.md  Cargo.toml  README.md
data/: dev.iris.viewer.desktop
docs/: BENCHMARK_PLAN.md  CODE_QUALITY_AUDIT.md  PLATFORM_ARCHITECTURE_TRANSITION.md  PRODUCT_ROADMAP.md  RELEASE_CHECKLIST.md  SUPPORT_MATRIX.md  V1_EXECUTION_PLAN.md  V1_RELEASE_CRITERIA.md
src/: color.rs  config.rs  error.rs  lib.rs  main.rs  raw.rs  renderer.rs  thumbcache.rs
src/shaders/: image.wgsl
src/viewport/: camera.rs  gpu.rs  mod.rs  renderer.rs
src/viewport/shaders/: denoise.wgsl  enhance.wgsl  image.wgsl  sharpen.wgsl
src/viewport/vk/: compute.rs  context.rs  dmabuf.rs  mod.rs  pipeline.rs  renderer.rs  shader.rs
tests/: scan.rs
