[package]
name = "iris"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bumped to v4_14 for GdkDmabufTextureBuilder and GraphicsOffload
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_4"] }

# Raw Vulkan Bindings
ash = "0.38"

# Linux specific types for DMA-BUF
drm-fourcc = "2.2.0"
libc = "0.2"

# Utilities
tokio = { version = "1", features = ["full"] }
rayon = "1"
futures = "0.3"
glib = "0.22.0"
gdk-pixbuf = "0.22.0"
image = "0.25.9"
glam = "0.32.0"
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
naga = { version = "28.0.0", features = ["wgsl-in", "spv-out"] }
