[package]
name = "iris"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
ash = "0.38"
libc = "0.2"
rayon = "1"
futures = "0.3"
glib = "0.22.0"
gdk-pixbuf = "0.22.0"
image = "0.25.9"
naga = { version = "28.0.0", features = ["wgsl-in", "spv-out"] }
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
glam = "0.32.0"
kamadak-exif = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
notify = "6"

# RAW camera file decoding (pure Rust)
rawloader = "0.37"
imagepipe = "0.5"

# Thumbnail cache keying
md5 = "0.7"

# ICC color profile transforms
lcms2 = "6"
